# chile-air-quality-predictions

./: .gitattributes  LICENSE.md  README.md  pyproject.toml
chile-air-quality-predictions/: 1_download_and_explore_data.ipynb  2_prepare_data.ipynb  3_predict.ipynb  predict_utils.py  prepare_utils.py
chile_air_quality_predictions/: 1_download_and_explore_data.ipynb
chile_air_quality_predictions/data/input/: info_estaciones.csv
chile_air_quality_predictions/src/: eda_utils.py  predict_utils.py  prepare_utils.py
